refactor(bank-app): migrate v2_2 to OOP architecture in v3
- Replaced procedural structure with full OOP design:
  - Added ConfigBanco centralizing constants and file paths
  - Created abstract class Transacao and concrete classes (Deposito, Saque, SaquePlus, TransacaoPlus)
  - Introduced Conta class with persistence methods (carregar_bd_conta, salvar_bd_conta)
  - Introduced Usuario and DadosBanco classes to manage multiple users and accounts
- Migrated persistence (JSON) into encapsulated methods with rollback safety
- Unified CPF validation and formatting (checar_limpar_cpf, formatar_cpf)
- Menus refactored: separated menu inicial and menu_conta with proper account context
- Extrato printing aligned with tabular formatting, including saldo, operações e saques diários
- Maintained all v2_2 features (multiuser, multiconta, transações plus, rollback, extrato) under new OOP design

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
   "cSpell.words": [
     "autouse",
-    "getcontext"
+    "DIARIAS",
+    "DIARIOS",
+    "getcontext",
+    "OPERACOES",
+    "PADRAO",
+    "transacao"
   ]
 }
